--- a/src/HandKit.Security.csproj
+++ b/src/HandKit.Security.csproj
@@ -5,10 +5,10 @@
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
 		<GeneratePackageOnBuild>True</GeneratePackageOnBuild>
-		<PackageProjectUrl>https://github.com/andyapin/Oryn.Security</PackageProjectUrl>
-		<RepositoryUrl>https://github.com/andyapin/Oryn.Security</RepositoryUrl>
+		<PackageProjectUrl>https://github.com/andyapin/HandKit.Security</PackageProjectUrl>
+		<RepositoryUrl>https://github.com/andyapin/HandKit.Security</RepositoryUrl>
 		<PackageTags>plugin;toolkit;security;jwt;md5;sha;sha256;android;ios;desktop;windows;mac;web;blazor;asp</PackageTags>
-		<Description>The Oryn.Security library provides essential security functionalities for C# applications, including working with JSON Web Tokens (JWT), generating MD5 hashes, and performing SHA-256 encryption and decryption.</Description>
+		<Description>The HandKit.Security library provides essential security functionalities for C# applications, including working with JSON Web Tokens (JWT), generating MD5 hashes, and performing SHA-256 encryption and decryption.</Description>
 		<Copyright>© andyapin - www.handityo.my.id</Copyright>
 		<Authors>Ibnu Hajar Handityo</Authors>
 		<PackageReadmeFile>README.md</PackageReadmeFile>
